[workspace]
members = [
    "forge-server",
    "forge-core",
    "forge-kernels",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rs545837"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Candle dependencies
candle-core = { path = "../candle/candle-core" }
candle-nn = { path = "../candle/candle-nn" }
candle-transformers = { path = "../candle/candle-transformers" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CUDA
cudarc = { version = "0.11", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc"] }

# Utils
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "6.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
