[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
candle-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
cuda = ["forge-core/cuda"]
metal = ["forge-core/metal"]
